force-app/main/default/objects/Contact/fields/FF_Module_4_Percent__c.field-meta.xml
<CustomField>
    <fullName>FF_Module_4_Percent__c</fullName>
    <label>FF - Module 4 - Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>