force-app/main/default/objects/Contact/fields/FF_Passed__c.field-meta.xml
<CustomField>
    <fullName>FF_Passed__c</fullName>
    <formula>AND(
 FF_Module_1_Percent__c &gt;= 0.75,
 FF_Module_2_Percent__c &gt;= 0.75,
 FF_Module_3_Percent__c &gt;= 0.75,
 FF_Module_4_Percent__c &gt;= 0.75,
 FF_Module_5_Percent__c &gt;= 0.75,
 FF_Module_6_Percent__c &gt;= 0.75
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FF Passed</label>
    <type>Checkbox</type>
</CustomField>