force-app/main/default/objects/Contact/fields/HBE_Module_2_Percent__c.field-meta.xml
<CustomField>
    <fullName>HBE_Module_2_Percent__c</fullName>
    <label>HBE - Module 2 - Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>