force-app/main/default/objects/Contact/fields/HBE_Passed__c.field-meta.xml
<CustomField>
    <fullName>HBE_Passed__c</fullName>
    <formula>AND(
HBE_Module_1_Percent__c &gt;= 0.75,
HBE_Module_2_Percent__c &gt;= 0.75,
HBE_Module_3_Percent__c &gt;= 0.75,
HBE_Module_4_Percent__c &gt;= 0.75,
HBE_Module_5_Percent__c &gt;= 0.75,
HBE_Module_6_Percent__c &gt;= 0.75
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HBE Passed</label>
    <type>Checkbox</type>
</CustomField>