force-app/main/default/objects/Contact/fields/Homewise_Branch_Location__c.field-meta.xml
<CustomField>
    <fullName>Homewise_Branch_Location__c</fullName>
    <label>Homewise Branch Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Santa Fe</fullName>
            </value>
            <value>
                <fullName>Albuquerque</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>