force-app/main/default/objects/Contact/fields/NHNW_Passed__c.field-meta.xml
<CustomField>
    <fullName>NHNW_Passed__c</fullName>
    <formula>NHNW_Percent__c &gt;= 0.75</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NHNW Passed</label>
    <type>Checkbox</type>
</CustomField>