force-app/main/default/objects/Contact/fields/NHNW_Percent__c.field-meta.xml
<CustomField>
    <fullName>NHNW_Percent__c</fullName>
    <label>NHNW Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>